<resources>
    <string name="app_name">iUIT</string>
    <string name="lbAccount">Tài khoản</string>
    <string name="lbPassword">Mật khẩu </string>
    <string name="lbDangNhap">Đăng nhập</string>
    <string name="lbForgotPassword">Quên mật khẩu</string>
    <string name="lbRegisterAccount">Đăng ký tài khoản</string>
    <string name="lbRegister">Đăng ký</string>
    <string name="lbEmail">Email</string>
    <string name="lbVerificationCode">Mã chứng thực</string>
    <string name="lbRePassword">Nhập lại mật khẩu</string>
    <string name="stringKhoiPhucPassword">(Nhập địa chỉ Email để khôi phục mật khẩu)</string>
    <string name="lbSend">Gửi</string>
    <string name="lbAccountNotExist">Tài khoản không tồn tại.</string>
    <string name="lbTaiKhoan">Tài khoản</string>
    <string name="lbDarkMode">Chế độ tối</string>
    <string name="lbBirthDay">Ngày sinh</string>
    <string name="lbPhone">Số điện thoại</string>
    <string name="lbAddressTemp">Địa chỉ tạm trú</string>
    <string name="lbFBLink">Địa chỉ facebook</string>
    <string name="lbSave">Lưu thông tin</string>
    <string name="lbNewPassword">Mật khẩu mới</string>
    <string name="lbChangeNewPassword">Nhập lại mật khẩu mới</string>
    <string name="lbChangePassword">Đổi mật khẩu</string>
    <string name="lbKhoa">Khoa</string>
    <string name="lbClass">Lớp</string>
    <string name="lbStudentId">Mã số sinh viên</string>
    <string name="lbGender">Giới tính</string>
    <string name="lbNganh">Ngành</string>
</resources>
