<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="vn.edu.uit.managementforstudents.ui.fragments.intro.IntroViewModel" />

        <variable
            name="listener"
            type="vn.edu.uit.managementforstudents.ui.fragments.intro.register.RegisterListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back"
            android:onClick="@{listener::onBackPressed}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbRegister"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_select_image"
            android:layout_width="@dimen/avatarsize"
            android:layout_height="@dimen/avatarsize"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:src="@drawable/ic_camera"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbRegister" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/img_select_image">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:hintTextAppearance="@style/hint_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbAccount"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/hint_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbEmail"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/hint_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbVerificationCode"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:hintTextAppearance="@style/hint_text_input"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbPassword"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:hintTextAppearance="@style/hint_text_input"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbRePassword"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/border_button"
            android:onClick="@{listener::onAcceptPressed}"
            android:text="@string/lbRegister"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
